# impulse-dynamics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/core/: body.hpp  collision.hpp  physics_metrics.hpp
include/math/: impulses_util.hpp  matrix.hpp
include/math/linear_algebra/: block_solver.hpp  gauss_jordan.hpp  gauss_seidel.hpp  matrix.hpp
include/render/: scene_renderer.hpp
include/sim/: scenarios.hpp  snapshot.hpp  sphere_layout.hpp  timeline.hpp  world.hpp
include/solvers/: collision_solver.hpp  global_solver.hpp  sequential_solver.hpp
src/: main.cpp
src/render/: scene_renderer.cpp
src/sim/: scenarios.cpp  snapshot.cpp  timeline.cpp  world.cpp
src/solvers/: global_solver.cpp  sequential_solver.cpp
